--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
     <div class="container">
         <div class="intro">
             <h2>소개</h2>
-            <p>這個列表包含韓語中最常用的 850 個基本單字。目前已上線前 10 個單字，點擊任何單字卡片查看詳細例句和用法。剩餘單字請在 WORD_DATA 中繼續添加。</p>
+            <p>這個列表包含韓語中最常用的 850 個基本單字。目前已上線 1-10 及 114-124 共 21 個單字，點擊任何單字卡片查看詳細例句和用法。剩餘單字請在 WORD_DATA 中繼續添加。</p>
         </div>
         
         <div class="export-section">
             <button class="export-btn" onclick="exportRange(1, 10)">匯出 1-10</button>
+            <button class="export-btn" onclick="exportRange(114, 124)">匯出 114-124</button>
         </div>
         
         <div class="search-box">
